force-app/main/default/objects/Apttus_Approval__ApprovalRuleDimension__c/Apttus_Approval__ApprovalRuleDimension__c.object-meta.xml
<CustomObject>
    <description>Represents an approval rule dimension</description>
    <label>Approval Rule Dimension</label>
    <nameField>
        <label>Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Rule Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>