force-app/main/default/objects/Apttus_Approval__ApprovalRuleDimension__c/fields/Apttus_Approval__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Description__c</fullName>
    <description>The description for the dimension</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>