force-app/main/default/objects/Apttus_Approval__ApprovalRuleDimension__c/fields/Apttus_Approval__DimensionType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DimensionType__c</fullName>
    <description>The dimension type</description>
    <label>Dimension Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
                <default>true</default>
                <label>Field</label>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>