force-app/main/default/objects/Apttus_Approval__ApprovalRuleDimension__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__BusinessObject__c</columns>
    <columns>Apttus_Approval__DimensionType__c</columns>
    <columns>Apttus_Approval__Datasource__c</columns>
    <columns>Apttus_Approval__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>